testing and bug fix for sph_point.py

--- a/doc.tex
+++ b/doc.tex
@@ -261,7 +261,7 @@ are expressed in terms of B.
 \Gamma\indices{^W_\phi_\phi} &= -(Wr/2) \sin^2\theta\\
 %
 \Gamma\indices{^\theta_\phi_\phi} &= -\sin\theta \cos\theta   \\
-\Gamma\indices{^\phi_\theta_\phi} &= \cot\theta   \\
+\Gamma\indices{^\phi_\theta_\phi} &= \cot\theta   
 \end{align}
 
 Need to check these by numerical sampling against the f90(...) output from maxima.
