fix factor of 2 bug

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -264,7 +264,8 @@ are expressed in terms of B.
 \Gamma\indices{^\phi_\theta_\phi} &= \cot\theta   
 \end{align}
 
-Need to check these by numerical sampling against the f90(...) output from maxima.
+Part of my test suite checks
+these by numerical sampling against the near-raw output from maxima.
 
 Posted these at \url{https://physics.stackexchange.com/questions/404611/christoffel-symbols-in-kruskal-szekeres-coordinates}
 
