passes test of Kruskal coords; code for transitioning vectors from Sch. to Kruskal

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{amsmath,url,tensor,amssymb}
+\usepackage{amsmath,url,tensor,amssymb,verbatim}
 \begin{document}
 \section{Sources of information}
 
@@ -154,6 +154,11 @@ Let
   W &= T-X,
 \end{align}
 which are the same as H\&E's $(v'/\sqrt2,w'/\sqrt2)$.
+\begin{verbatim}
+  W    V
+   \  /
+    \/
+\end{verbatim}
 Metric is (my calculation)
 \begin{equation}
   ds^2 = B dVdW-\ldots d\Omega^2.
