ripped out code for era mechanism, could never get it to work right

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -219,6 +219,10 @@ or $\rho\gtrsim 2000$, represent as Schwarzschild coordinates.
 
 (c) ( interior) For $r<1$, represent as $(V,W)$.
 
+This is essentially what I implemented, except that I could never get the ``sliding chart''
+or ``era'' mechanism to work properly and ended up ripping it out. The closest I got it to
+working was in git commit 25d94127d35e942.
+
 \section{Coordinates for Penrose diagrams}
 
 Let
