--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -332,8 +332,9 @@ Or in S coords, the dominant C symbol gives $\ddot{r}\approx -(1/2)r^{-3}\dot{r}
 
 The main point here is that in terms of errors and adaptation of RK,
 we have a diffeq that misbehaves roughly like $y'=f(y)=y^{-3}$, so that
-maybe we expect errors of order $f^{(3)}$, or $y^{-6}$. Errors in proper
-time may not be as bad as this.
+maybe we expect errors of order $f^{(3)}$, or $r^{-6}$. Errors in proper
+time might then be of the same order, since proper time and r are related
+by a power law?
 
 For a massive particle infalling along the Kruskal T axis, the solution to the
 approximate equations of motion, using small-r approx for $r(V,W)$ (see above),
