bug fixes in kruskal

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -383,6 +383,10 @@ Then we can compute $r$ without having to directly manipulate V and W:
   r = 1+\ell=1+W(e^u).
 \end{equation*}
 The function $W(e^u)$ is straightforward to compute --- see below.
+The Schwarzschild time is
+\begin{equation*}
+  t = |a|+|b|+\ln\left(\frac{1-e^{-2|a|}}{1-e^{-2|b|}}\right).
+\end{equation*}
 To get the coefficient appearing in the metric,
 \begin{equation*}
   \mu = \frac{(1+e^{-2a})(1+e^{2b})}{2er} e^{a-b-\ell}.
