--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -401,12 +401,12 @@ it uses $\ln(x/W_n)$.
 
 For the transformation from Schwarzschild coordinates to (a,b), let
 \begin{equation*}
-  x = \sqrt{|r-1|}\exp\left(\pm\frac{r+t}{2}\right),
+  x_\pm = \sqrt{|r-1|}\exp\left(\frac{r\pm t}{2}\right).
 \end{equation*}
-where the $+$ sign holds for the computation of $a$ in region I or $b$ in region II. Then
+Then
 \begin{align*}
-  a &= \sinh^{-1} x \\
-  b &= -\sinh^{-1} x' \quad \text{[other value of x]} \\
+  a &= \sinh^{-1} x_+ \\
+  b &= \pm\sinh^{-1} x_- \quad \text{[minus sign in region I]} \\
 \end{align*}
 If $x$ is too big to be represented in floating point, then we have the approximation
 $\sinh^{-1} x = \ln(2x)+O(x^{-2})$. It can happen close to the horizon that the exponential
